tests/snapshots/parse__tests__parse_share1b.snap
---
source: tests/parse.rs
expression: "parse::<f32>(include_str!(\"../tests/data/netlib/share1b\"))?"
---
name: SHARE1B
rows:
  - row_type: Nr
    row_name: "000000"
  - row_type: Eq
    row_name: "000002"
  - row_type: Eq
    row_name: "000003"
  - row_type: Eq
    row_name: "000004"
  - row_type: Eq
    row_name: "000005"
  - row_type: Eq
    row_name: "000006"
  - row_type: Eq
    row_name: "000007"
  - row_type: Eq
    row_name: "000008"
  - row_type: Eq
    row_name: "000009"
  - row_type: Eq
    row_name: "000010"
  - row_type: Eq
    row_name: "000011"
  - row_type: Eq
    row_name: "000012"
  - row_type: Eq
    row_name: "000013"
  - row_type: Eq
    row_name: "000014"
  - row_type: Eq
    row_name: "000015"
  - row_type: Leq
    row_name: "000016"
  - row_type: Eq
    row_name: "000017"
  - row_type: Eq
    row_name: "000018"
  - row_type: Leq
    row_name: "000019"
  - row_type: Leq
    row_name: "000020"
  - row_type: Eq
    row_name: "000021"
  - row_type: Eq
    row_name: "000022"
  - row_type: Leq
    row_name: "000023"
  - row_type: Eq
    row_name: "000024"
  - row_type: Eq
    row_name: "000025"
  - row_type: Leq
    row_name: "000026"
  - row_type: Leq
    row_name: "000027"
  - row_type: Eq
    row_name: "000028"
  - row_type: Eq
    row_name: "000029"
  - row_type: Leq
    row_name: "000030"
  - row_type: Eq
    row_name: "000031"
  - row_type: Eq
    row_name: "000032"
  - row_type: Leq
    row_name: "000033"
  - row_type: Eq
    row_name: "000034"
  - row_type: Eq
    row_name: "000035"
  - row_type: Eq
    row_name: "000036"
  - row_type: Eq
    row_name: "000037"
  - row_type: Eq
    row_name: "000038"
  - row_type: Eq
    row_name: "000039"
  - row_type: Eq
    row_name: "000040"
  - row_type: Eq
    row_name: "000041"
  - row_type: Leq
    row_name: "000042"
  - row_type: Leq
    row_name: "000043"
  - row_type: Leq
    row_name: "000044"
  - row_type: Eq
    row_name: "000045"
  - row_type: Eq
    row_name: "000046"
  - row_type: Eq
    row_name: "000047"
  - row_type: Eq
    row_name: "000048"
  - row_type: Eq
    row_name: "000049"
  - row_type: Eq
    row_name: "000050"
  - row_type: Eq
    row_name: "000051"
  - row_type: Eq
    row_name: "000052"
  - row_type: Leq
    row_name: "000053"
  - row_type: Leq
    row_name: "000054"
  - row_type: Leq
    row_name: "000055"
  - row_type: Eq
    row_name: "000056"
  - row_type: Eq
    row_name: "000057"
  - row_type: Eq
    row_name: "000058"
  - row_type: Eq
    row_name: "000059"
  - row_type: Eq
    row_name: "000060"
  - row_type: Eq
    row_name: "000061"
  - row_type: Eq
    row_name: "000062"
  - row_type: Eq
    row_name: "000063"
  - row_type: Eq
    row_name: "000064"
  - row_type: Eq
    row_name: "000065"
  - row_type: Eq
    row_name: "000066"
  - row_type: Eq
    row_name: "000067"
  - row_type: Eq
    row_name: "000068"
  - row_type: Eq
    row_name: "000069"
  - row_type: Eq
    row_name: "000070"
  - row_type: Leq
    row_name: "000071"
  - row_type: Eq
    row_name: "000072"
  - row_type: Eq
    row_name: "000073"
  - row_type: Leq
    row_name: "000074"
  - row_type: Eq
    row_name: "000075"
  - row_type: Leq
    row_name: "000076"
  - row_type: Eq
    row_name: "000077"
  - row_type: Eq
    row_name: "000078"
  - row_type: Leq
    row_name: "000079"
  - row_type: Eq
    row_name: "000080"
  - row_type: Eq
    row_name: "000081"
  - row_type: Leq
    row_name: "000082"
  - row_type: Leq
    row_name: "000083"
  - row_type: Eq
    row_name: "000084"
  - row_type: Eq
    row_name: "000085"
  - row_type: Leq
    row_name: "000086"
  - row_type: Eq
    row_name: "000087"
  - row_type: Eq
    row_name: "000088"
  - row_type: Leq
    row_name: "000089"
  - row_type: Eq
    row_name: "000090"
  - row_type: Eq
    row_name: "000091"
  - row_type: Eq
    row_name: "000092"
  - row_type: Eq
    row_name: "000093"
  - row_type: Eq
    row_name: "000094"
  - row_type: Eq
    row_name: "000095"
  - row_type: Eq
    row_name: "000096"
  - row_type: Eq
    row_name: "000097"
  - row_type: Leq
    row_name: "000098"
  - row_type: Leq
    row_name: "000099"
  - row_type: Leq
    row_name: "000100"
  - row_type: Eq
    row_name: "000101"
  - row_type: Eq
    row_name: "000102"
  - row_type: Eq
    row_name: "000103"
  - row_type: Eq
    row_name: "000104"
  - row_type: Eq
    row_name: "000105"
  - row_type: Eq
    row_name: "000106"
  - row_type: Eq
    row_name: "000107"
  - row_type: Eq
    row_name: "000108"
  - row_type: Leq
    row_name: "000109"
  - row_type: Leq
    row_name: "000110"
  - row_type: Leq
    row_name: "000111"
  - row_type: Eq
    row_name: "000112"
  - row_type: Eq
    row_name: "000113"
  - row_type: Eq
    row_name: "000114"
  - row_type: Eq
    row_name: "000115"
  - row_type: Eq
    row_name: "000116"
  - row_type: Eq
    row_name: "000117"
  - row_type: Eq
    row_name: "000118"
columns:
  - name: CCC001
    first_pair:
      row_name: "000014"
      value: -1
    second_pair:
      row_name: "000015"
      value: 1
  - name: CCC001
    first_pair:
      row_name: "000016"
      value: 100
    second_pair:
      row_name: "000017"
      value: 130.5
  - name: CCC001
    first_pair:
      row_name: "000018"
      value: -101
    second_pair:
      row_name: "000020"
      value: -14
  - name: CCC002
    first_pair:
      row_name: "000002"
      value: 1
    second_pair:
      row_name: "000014"
      value: 1
  - name: CCC002
    first_pair:
      row_name: "000016"
      value: -106
    second_pair:
      row_name: "000017"
      value: -126
  - name: CCC002
    first_pair:
      row_name: "000018"
      value: 339
    second_pair:
      row_name: "000019"
      value: -447.5098
  - name: CCC003
    first_pair:
      row_name: "000005"
      value: 1
    second_pair:
      row_name: "000014"
      value: 1
  - name: CCC003
    first_pair:
      row_name: "000016"
      value: -91.4
    second_pair:
      row_name: "000017"
      value: -99.3
  - name: CCC003
    first_pair:
      row_name: "000018"
      value: 83
    second_pair:
      row_name: "000019"
      value: -18.24
  - name: CCC004
    first_pair:
      row_name: "000008"
      value: 1
    second_pair:
      row_name: "000014"
      value: 1
  - name: CCC004
    first_pair:
      row_name: "000016"
      value: -106.6
    second_pair:
      row_name: "000017"
      value: -141
  - name: CCC004
    first_pair:
      row_name: "000018"
      value: 68
    second_pair:
      row_name: "000019"
      value: -301.1599
  - name: CCC005
    first_pair:
      row_name: "000011"
      value: 1
    second_pair:
      row_name: "000014"
      value: 1
  - name: CCC005
    first_pair:
      row_name: "000016"
      value: -102.6
    second_pair:
      row_name: "000017"
      value: -190
  - name: CCC005
    first_pair:
      row_name: "000018"
      value: 12
    second_pair:
      row_name: "000019"
      value: 985.6399
rhs: ~
ranges: ~
bounds: ~

